# nebulus-atom

./: .aider.conf.yml  .dockerignore  .env  .env.example  .env.swarm.example  .gitignore  .mini_nebulus_history  .pre-commit-config.yaml  AI_DIRECTIVES.md  CLAUDE.md  CONTEXT.md  CONTRIBUTORS.md  Dockerfile  Dockerfile.core  Dockerfile.web  GEMINI.md  MOLTBOT.md  README.md  WORKFLOW.md  agent.js  docker-compose.swarm.yml  docker-compose.yml  hello_agent.py  mkdocs.yml  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  reference_gemini-cli  requirements-dev.txt  requirements-minion.txt  requirements.txt  ui_test_prompt.txt  ui_test_prompts_individual.txt  walkthrough.md
.claude/: README.md  config.json
.github/workflows/: docs.yml  unittests.yml
.nebulus/skills/: _index.yaml  add-feature.yaml  fix-bug.yaml  write-tests.yaml
.streamlit/: config.toml
2026-02-05-nebulus-atom-v2-design/: index.html
AI_INSIGHTS/: index.html
ROADMAP/: index.html
ansible/: ansible.cfg  setup_workstation.yml
concurrent-inference-matrix/: index.html
docs/: 2026-02-05-nebulus-atom-v2-design.md  AI_INSIGHTS.md  ROADMAP.md  concurrent-inference-matrix.md  index.md  provisioning-config.md  standalone-audit.md
examples/: atom.env.example  nebulus-config.yml
mini_nebulus/: config.py  main.py  server.py
mini_nebulus.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
nebulus_atom/: config.py  main.py  server.py  settings.py
nebulus_swarm/: __init__.py  config.py  logging.py
provisioning-config/: index.html
scripts/: verify_features.py
search/: search_index.json
src/: index.js
standalone-audit/: index.html
swarm/: index.html
tests/: conftest.py  test_ast_service.py  test_audit_trail.py  test_auditor.py  test_autonomous_execution.py  test_calculator.py  test_certification.py  test_cli_features.py  test_cognition_service.py  test_context_manager.py  test_cost_controls.py  test_dispatcher.py  test_doc_service.py  test_error_recovery_service.py  test_evaluator.py  test_evaluator_evaluate.py  test_failure_memory_service.py  test_focus.py  test_focus_cli.py  test_github_mcp.py  test_governance.py  test_halt.py  test_health_client.py  test_interactive.py  test_journal_service.py  test_llm_client_pool.py  test_llm_parser.py  test_llm_pool.py  test_logging.py  test_macro_service.py  test_main_cli.py  test_mcp.py  test_mcp_client.py  test_minion.py  test_minion_agent.py  test_minion_question.py  test_mirrors.py  test_mirrors_worktree.py  test_model_router.py  test_multimodal.py  (+54 more)
(+275 files in other folders)
