[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mini-nebulus"
version = "0.1.0"
description = "A professional, autonomous AI engineer CLI."
readme = "README.md"
authors = [
  { name = "J.L. West", email = "jlwestsr@example.com" },
]
requires-python = ">=3.12"
dependencies = [
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "discord.py>=2.3.0",
]

[project.scripts]
mini-nebulus = "mini_nebulus.main:app"
mn = "mini_nebulus.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["mini_nebulus*"]
