[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nebulus-atom"
version = "0.1.0"
description = "A professional, autonomous AI engineer CLI."
readme = "README.md"
authors = [
  { name = "J.L. West", email = "jlwestsr@example.com" },
]
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "prompt_toolkit>=3.0.0",
    "pyyaml>=6.0",
    "mcp>=1.0.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "docker>=7.0.0",
    "slack-bolt>=1.18.0",
    "aiohttp>=3.9.0",
    "PyGithub>=2.1.0",
    "croniter>=2.0.0",
    "streamlit>=1.30.0",
    "textual>=0.40.0",
]

[project.scripts]
nebulus-atom = "nebulus_atom.main:app"
mn = "nebulus_atom.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["nebulus_atom*", "nebulus_swarm*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["nebulus_atom", "nebulus_swarm"]

[tool.coverage.report]
show_missing = true
skip_empty = true
